[package]
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"
name = "app"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nb = "0.1.2"
panic-semihosting = "0.5.2"
ssd1306 = "0.2.5"
embedded-graphics = "0.4.5"
heapless = "0.4.4"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
bench = false
name = "app"
test = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1]
version = "0.7.0"
features = ["stm32f103", "rt"]
